--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -170,7 +170,8 @@
 		<rome.version>1.0.0</rome.version>
 		<querydsl.version>3.3.3</querydsl.version>
 		<protobuf.version>2.5.0</protobuf.version>
-		<smack.version>3.2.1</smack.version>
+		<smack3.version>3.2.1</smack3.version>
+		<smack.version>4.0.0</smack.version>
 		<snappy.version>1.1.0.1</snappy.version>
 		<spullara-redis.version>0.7</spullara-redis.version>
 		<sun-facelets.version>1.1.14</sun-facelets.version>
@@ -1208,11 +1209,26 @@
 			<dependency>
 				<groupId>org.igniterealtime.smack</groupId>
 				<artifactId>smack</artifactId>
-				<version>${smack.version}</version>
+				<version>${smack3.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.igniterealtime.smack</groupId>
 				<artifactId>smackx</artifactId>
+				<version>${smack3.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.igniterealtime.smack</groupId>
+				<artifactId>smack-tcp</artifactId>
+				<version>${smack.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.igniterealtime.smack</groupId>
+				<artifactId>smack-resolver-javax</artifactId>
+				<version>${smack.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.igniterealtime.smack</groupId>
+				<artifactId>smack-extensions</artifactId>
 				<version>${smack.version}</version>
 			</dependency>
 			<dependency>
