--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.3.BUILD-SNAPSHOT</version>
+		<version>1.3.0.BUILD-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -122,6 +122,7 @@
 		<javax-jdo.version>3.0.1</javax-jdo.version>
 		<javax-jsp.version>2.2.1</javax-jsp.version>
 		<javax-jstl.version>1.2.1</javax-jstl.version>
+		<javax-money.version>1.0-RC3</javax-money.version>
 		<javax-portlet.version>2.0</javax-portlet.version>
 		<javax-saaj.version>1.3.5</javax-saaj.version>
 		<javax-validation.version>1.1.0.Final</javax-validation.version>
@@ -164,12 +165,12 @@
 		<openid4java.version>0.9.6</openid4java.version>
 		<paho-mqtt-client.version>0.4.0</paho-mqtt-client.version>
 		<pig.version>0.12.1</pig.version>
-		<poi.version>3.10.1</poi.version>
+		<poi.version>3.11</poi.version>
 		<protobuf.version>2.5.0</protobuf.version>
 		<protobuf-java-format.version>1.2</protobuf-java-format.version>
 		<qdox.version>1.12.1</qdox.version>
 		<quartz.version>2.2.1</quartz.version>
-		<querydsl.version>3.4.3</querydsl.version>
+		<querydsl.version>3.6.2</querydsl.version>
 		<rabbit-amqp-client.version>3.4.3</rabbit-amqp-client.version>
 		<rometools.version>1.5.0</rometools.version>
 		<smack.version>3.2.1</smack.version>
@@ -182,6 +183,7 @@
 		<sun-saaj.version>1.3.25</sun-saaj.version>
 		<taglibs-standard.version>1.2.1</taglibs-standard.version>
 		<testng.version>6.8.13</testng.version>
+		<threetenbp.version>1.2</threetenbp.version>
 		<tiles.version>3.0.5</tiles.version>
 		<tiles-request.version>1.0.6</tiles-request.version>
 		<tyrus.version>1.3.5</tyrus.version>
@@ -522,6 +524,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.mysema.querydsl</groupId>
+				<artifactId>querydsl-collections</artifactId>
+				<version>${querydsl.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mysema.querydsl</groupId>
 				<artifactId>querydsl-core</artifactId>
 				<version>${querydsl.version}</version>
 			</dependency>
@@ -719,6 +726,11 @@
 				<groupId>javax.jdo</groupId>
 				<artifactId>jdo-api</artifactId>
 				<version>${javax-jdo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.money</groupId>
+				<artifactId>money-api</artifactId>
+				<version>${javax-money.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.portlet</groupId>
@@ -994,6 +1006,11 @@
 			<dependency>
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi</artifactId>
+				<version>${poi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi-ooxml</artifactId>
 				<version>${poi.version}</version>
 			</dependency>
 			<dependency>
@@ -1300,6 +1317,11 @@
 				<groupId>org.testng</groupId>
 				<artifactId>testng</artifactId>
 				<version>${testng.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.threeten</groupId>
+				<artifactId>threetenbp</artifactId>
+				<version>${threetenbp.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.xerial.snappy</groupId>
