--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -57,7 +57,7 @@ platform_definition:
         - grails-wrapper-support
     - name: Groovy
       groupId: org.codehaus.groovy
-      version: 2.3.10
+      version: 2.4.1
       modules:
         - groovy
         - groovy-ant
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.3.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.2.3.BUILD-SNAPSHOT
+      version: 1.3.0.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -194,40 +194,40 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.1.2.RELEASE
+      version: 1.2.0.RC1
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.9.2.RELEASE
+      version: 1.10.0.RC1
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.2.2.RELEASE
+      version: 1.3.0.RC1
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.1.2.RELEASE
+      version: 1.2.0.RC1
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.5.2.RELEASE
+      version: 1.6.0.RC1
       modules:
         - spring-data-gemfire
       build:
         repository: https://github.com/spring-projects/spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.7.2.RELEASE
+      version: 1.8.0.RC1
       modules:
         - spring-data-jpa
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.6.2.RELEASE
+      version: 1.7.0.RC1
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -235,30 +235,30 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.2.2.RELEASE
+      version: 3.3.0.RC1
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.4.2.RELEASE
+      version: 1.5.0.RC1
       build:
         repository: https://github.com/spring-projects/spring-data-redis
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.2.2.RELEASE
+      version: 2.3.0.RC1
       modules:
         - spring-data-rest-core
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.3.2.RELEASE
+      version: 1.4.0.RC1
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.1.6.BUILD-SNAPSHOT
+      version: 4.2.0.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
@@ -511,6 +511,7 @@ platform_definition:
     ignored:
       # For user convenience, Boot provides extra dependency management for modules that both it
       # and the rest of the Platform do not depend upon
+      - 'ch.qos.logback:logback-access'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
       - 'com.github.mxab.thymeleaf.extras:thymeleaf-extras-data-attribute'
@@ -538,6 +539,7 @@ platform_definition:
       - 'org.hibernate:hibernate-envers'
       - 'org.hibernate:hibernate-jpamodelgen'
       - 'org.javassist:javassist'
+      - 'org.mariadb.jdbc:mariadb-java-client'
       - 'org.slf4j:slf4j-jdk14'
       - 'org.spockframework:spock-spring'
       - 'org.springframework:springloaded'
