--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.1.11.RELEASE</version>
+		<version>1.1.12.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -56,7 +56,7 @@
 		<spring-security.version>3.2.6.RELEASE</spring-security.version>
 		<spring-security-oauth.version>2.0.6.RELEASE</spring-security-oauth.version>
 		<spring-web-flow.version>2.4.1.RELEASE</spring-web-flow.version>
-		<spring-web-services.version>2.2.0.RELEASE</spring-web-services.version>
+		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
 
 		<ant.version>1.9.4</ant.version>
 		<antlr.version>2.7.7</antlr.version>
@@ -90,6 +90,7 @@
 		<dom4j.version>1.6.1</dom4j.version>
 		<eclipselink.version>2.5.2</eclipselink.version>
 		<eclipselink-javax-persistence.version>2.1.0</eclipselink-javax-persistence.version>
+		<ehcache.version>2.8.5</ehcache.version>
 		<ehcache-core.version>2.6.10</ehcache-core.version>
 		<elasticsearch.version>1.1.2</elasticsearch.version>
 		<evo-inflector.version>1.1</evo-inflector.version>
@@ -796,6 +797,11 @@
 				<groupId>net.openhft</groupId>
 				<artifactId>lang</artifactId>
 				<version>${openhft-lang.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.sf.ehcache</groupId>
+				<artifactId>ehcache</artifactId>
+				<version>${ehcache.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
