--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -106,7 +106,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.4.3.RELEASE
+      version: 1.4.4.RELEASE
       modules:
         - spring-amqp
         - spring-erlang
@@ -115,7 +115,7 @@ platform_definition:
         repository: https://github.com/spring-projects/spring-amqp
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 3.0.3.RELEASE
+      version: 3.0.4.BUILD-SNAPSHOT
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -123,7 +123,7 @@ platform_definition:
         - spring-batch-test
       build:
         repository: https://github.com/spring-projects/spring-batch
-        checkout: 3.0.3.RELEASE
+        checkout: 3.0.x
     - name: Spring Boot
       groupId: org.springframework.boot
       version: 1.3.0.BUILD-SNAPSHOT
@@ -304,7 +304,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.1.2.RELEASE
+      version: 4.1.3.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
