--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.6.9.RELEASE
+      version: 1.6.10.RELEASE
       modules:
         - spring-amqp
         - spring-rabbit
@@ -61,7 +61,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.4.7.BUILD-SNAPSHOT
+      version: 1.4.7.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -141,48 +141,48 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.4.10.RELEASE
+      version: 1.4.11.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.12.10.RELEASE
+      version: 1.12.11.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.1.10.RELEASE
+      version: 2.1.11.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.0.10.RELEASE
+      version: 2.0.11.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.0.10.RELEASE
+      version: 1.0.11.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.8.10.RELEASE
+      version: 1.8.11.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.10.10.RELEASE
+      version: 1.10.11.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.1.10.RELEASE
+      version: 1.1.11.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.9.10.RELEASE
+      version: 1.9.11.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -190,29 +190,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.1.10.RELEASE
+      version: 4.1.11.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.7.10.RELEASE
+      version: 1.7.11.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.5.10.RELEASE
+      version: 2.5.11.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.0.10.RELEASE
+      version: 2.0.11.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.9.BUILD-SNAPSHOT
+      version: 4.3.9.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -241,7 +241,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.9.RELEASE
+      version: 4.3.10.RELEASE
       build:
         checkout: 4.3.x
         compileWith: jdk8
@@ -620,23 +620,26 @@ platform_definition:
       - 'org.xerial:sqlite-jdbc'
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
-    'com.google.guava:guava': '20.0'
-    'org.beanshell:bsh': '2.0b5'
-    'org.apache.derby:derby': '10.13.1.1'
-    'org.apache.derby:derbyclient': '10.13.1.1'
-    'org.hsqldb:hsqldb': '2.3.4'
-    'io.netty:netty-all': '4.1.10.Final'
-    'javax.jdo:jdo-api': '3.1'
-    'org.hibernate:hibernate-core': '5.2.10.Final'
-    'net.sourceforge.htmlunit:htmlunit': '2.23'
-    'org.seleniumhq.selenium:htmlunit-driver': '2.23.2'
-    'org.skyscreamer:jsonassert': '1.4.0'
     'com.google.code.gson:gson': '2.8.0'
+    'com.google.guava:guava': '20.0'
     'com.rometools:rome': '1.7.2'
     'com.squareup.okhttp3:okhttp': '3.7.0'
-    'org.eclipse.jetty:jetty-client': '9.4.5.v20170502'
+    'io.netty:netty-all': '4.1.11.Final'
+    'io.undertow:undertow-core': '1.3.30.Final'
+    'io.undertow:undertow-servlet': '1.3.30.Final'
+    'io.undertow:undertow-websockets-jsr': '1.3.30.Final'
+    'javax.jdo:jdo-api': '3.1'
+    'net.sourceforge.htmlunit:htmlunit': '2.23'
+    'org.apache.derby:derby': '10.13.1.1'
+    'org.apache.derby:derbyclient': '10.13.1.1'
+    'org.beanshell:bsh': '2.0b5'
     'org.eclipse.jetty.websocket:websocket-client': '9.4.5.v20170502'
     'org.eclipse.jetty.websocket:websocket-server': '9.4.5.v20170502'
+    'org.eclipse.jetty:jetty-client': '9.4.5.v20170502'
+    'org.hibernate:hibernate-core': '5.2.10.Final'
+    'org.hsqldb:hsqldb': '2.3.4'
+    'org.seleniumhq.selenium:htmlunit-driver': '2.23.2'
+    'org.skyscreamer:jsonassert': '1.4.0'
     'org.springframework.ldap:spring-ldap-core': '2.2.0.RELEASE'
   repositories:
       - id: central
