--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -125,52 +125,52 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M4
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M4
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -178,29 +178,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.M4
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M4
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M4
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.M4
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.RC2
       modules:
         - spring-aop
         - spring-aspects
@@ -229,7 +229,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.M5
       build:
         compileWith: jdk8
         runTestsWith:
@@ -337,12 +337,12 @@ platform_definition:
         repository: https://github.com/spring-projects/spring-restdocs
     - name: Spring Retry
       groupId: org.springframework.retry
-      version: 1.2.0.RELEASE
+      version: 1.2.1.RELEASE
       modules:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.M2
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -377,7 +377,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.0.M1
+      version: 2.0.0.M2
       modules:
         - spring-session
         - spring-session-data-redis
@@ -556,6 +556,7 @@ platform_definition:
       - 'io.netty:netty-transport-rxtx'
       - 'io.netty:netty-transport-sctp'
       - 'io.netty:netty-transport-udt'
+      - 'io.netty:netty-transport-unix-common'
       - 'io.projectreactor.addons:reactor-adapter'
       - 'io.projectreactor.addons:reactor-extra'
       - 'io.projectreactor.addons:reactor-logback'
