--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -377,9 +377,9 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.0.M2
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
-        - spring-session
+        - spring-session-core
         - spring-session-data-redis
         - spring-session-hazelcast
         - spring-session-jdbc
@@ -467,11 +467,12 @@ platform_definition:
     ignored_modules:
       - 'org.springframework.boot:spring-boot-actuator-docs' # Its dependencies are provided
       - 'org.springframework.boot:spring-boot-cli' # The CLI doesn't expose its dependencies to applications
-      - 'org.springframework.boot:spring-boot-dependencies' # The Platform inherits spring-boot-dependencies via spring-boot-starter-parent
-      - 'org.springframework.boot:spring-boot-starter-parent' # Used by the Platform as its parent
-      - 'org.springframework.boot:spring-boot-maven-plugin' # The plugin doesn't expose it dependencies to applications
-      - 'org.springframework.boot:spring-boot-configuration-processor' # Used by the Boot build to generate metadata about @ConfigurationProperties
       - 'org.springframework.boot:spring-boot-configuration-metadata' # Used by the Boot build to generate metadata about @ConfigurationProperties
+      - 'org.springframework.boot:spring-boot-configuration-processor' # Used by the Boot build to generate metadata about @ConfigurationProperties
+      - 'org.springframework.boot:spring-boot-dependencies' # The Platform inherits spring-boot-dependencies via spring-boot-starter-parent
+      - 'org.springframework.boot:spring-boot-loader-tools' # Doesn't expose it dependencies to applications
+      - 'org.springframework.boot:spring-boot-maven-plugin' # The plugin doesn't expose it dependencies to applications
+      - 'org.springframework.boot:spring-boot-starter-parent' # Used by the Platform as its parent
       - 'org.springframework.restdocs:spring-restdocs-asciidoctor' # Used as an Asciidoctor extension, not by application code or tests
   unused_dependencies:
     ignored:
