--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -138,7 +138,7 @@
 		<protobuf-java-format.version>1.4</protobuf-java-format.version>
 		<rabbit-amqp-client.version>4.1.1</rabbit-amqp-client.version>
 		<rabbit-http-client.version>1.2.0.RELEASE</rabbit-http-client.version>
-		<reactive-streams.version>1.0.0</reactive-streams.version>
+		<reactive-streams.version>1.0.1-RC2</reactive-streams.version>
 		<rest-assured.version>2.9.0</rest-assured.version>
 		<rest-assured3.version>3.0.3</rest-assured3.version>
 		<rometools.version>1.7.3</rometools.version>
