--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.0.BUILD-SNAPSHOT
+      version: 3.1.0.M3
       modules:
         - reactor-core
       build:
