--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -14,7 +14,7 @@ platform_definition:
         - reactor-core
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M5
       modules:
         - spring-amqp
         - spring-rabbit
@@ -25,7 +25,7 @@ platform_definition:
           - jdk8
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 4.0.0.BUILD-SNAPSHOT
+      version: 4.0.0.M3
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -120,81 +120,81 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.RC2
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.RC2
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.RC2
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.RC2
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.RC2
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.0.BUILD-SNAPSHOT
+      version: 3.0.0.RC2
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.RC3
       modules:
         - spring-aop
         - spring-aspects
@@ -223,7 +223,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.M6
       build:
         compileWith: jdk8
         runTestsWith:
@@ -285,7 +285,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -336,7 +336,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.M3
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -365,13 +365,13 @@ platform_definition:
        - spring-security-jwt
     - name: Spring Security OAuth
       groupId: org.springframework.security.oauth
-      version: 2.2.0.BUILD-SNAPSHOT
+      version: 2.2.0.RC1
       modules:
         - spring-security-oauth
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.0.BUILD-SNAPSHOT
+      version: 2.0.0.M3
       modules:
         - spring-session-core
         - spring-session-data-redis
